Fix spacing between Slack and supporters section

--- a/_sass/modules/_supporters.sass
+++ b/_sass/modules/_supporters.sass
@@ -1,5 +1,5 @@
 .supporters
-  margin-bottom: 10px
+  margin-bottom: 20px
   clear: left
 
   ul
